[gd_scene load_steps=5 format=3 uid="uid://jgepwrqw3ypy"]

[ext_resource type="Script" uid="uid://btcwhbgmm7gkb" path="res://character_sheet_components/creation/character_creation.gd" id="1_4pc4v"]
[ext_resource type="PackedScene" uid="uid://bc80e3lhwkyo1" path="res://character_sheet_components/create_attribute_bar.tscn" id="2_42m3a"]
[ext_resource type="Texture2D" uid="uid://gv4yath7qju2" path="res://images/stat_column_9rect.png" id="2_88mhq"]
[ext_resource type="Texture2D" uid="uid://dc7ar5ld0xjj8" path="res://images/stat_column_9rect_hover.png" id="3_88mhq"]

[node name="Character_Creation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pc4v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Character Name:"

[node name="name_input" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_length = 350

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(525, 630)
layout_mode = 2
size_flags_horizontal = 0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
current_tab = 0

[node name="Stats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="point_buy_box" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Stats/point_buy_box"]
layout_mode = 2
text = "Points:"

[node name="remaining_points" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Stats/point_buy_box"]
unique_name_in_owner = true
layout_mode = 2

[node name="total_points" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Stats/point_buy_box"]
unique_name_in_owner = true
layout_mode = 2

[node name="attributes_bar" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Stats" instance=ExtResource("2_42m3a")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Class" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
metadata/_tab_index = 1

[node name="roll_options" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class"]
layout_mode = 2

[node name="btn_melee" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_88mhq")
texture_pressed = ExtResource("3_88mhq")
texture_hover = ExtResource("3_88mhq")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_melee"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_melee/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_melee/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Melee"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_melee/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Physical attacking classes. Typically front line"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="btn_spellcaster" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_88mhq")
texture_pressed = ExtResource("3_88mhq")
texture_hover = ExtResource("3_88mhq")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_spellcaster"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_spellcaster/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_spellcaster/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spellcasters"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_spellcaster/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Magic Users. Lower in Health typically found in the back"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="btn_support" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_88mhq")
texture_pressed = ExtResource("3_88mhq")
texture_hover = ExtResource("3_88mhq")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_support"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_support/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_support/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Support"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_support/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Classes that are not strictly Melee or Spellcasters"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/HBoxContainer"]
layout_mode = 2
text = "Class: "

[node name="class_options" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class"]
layout_mode = 2

[node name="flavor" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="skill_req_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Required Skill:"

[node name="skill_requirements" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="mc_req_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Multiclass Requirements:"

[node name="mc_skill_requirements" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dex, Con"

[node name="saving_throws_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="saving_throws" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="profiency_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Proficiencies"

[node name="profiencies" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(525, 600)
layout_mode = 2
size_flags_horizontal = 8

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_melee" to="." method="_on_btn_melee_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_spellcaster" to="." method="_on_btn_spellcaster_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel/TabContainer/Class/roll_options/btn_support" to="." method="_on_btn_support_pressed"]
